feat: complete shortform and community domains
